# lope

./: Cargo.lock.bak  Cargo.toml  README.md  todo.txt
src/: app.rs  display.rs  input.rs  lib.rs  main.rs  openai.rs  prompt.rs  theme.rs
src/widgets/: file_browser.rs  mod.rs  options.rs  prompt_editor.rs
