[package]
name = "lope"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
crossbeam = "0.8.4"
crossterm = "0.28.1"
ignore = "0.4.23"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
walkdir = "2.5.0"
